--- a/SurvivalGame/Content/Scripts/package.json
+++ b/SurvivalGame/Content/Scripts/package.json
@@ -1,7 +1,9 @@
 {
+  "type": "module",
   "dependencies": {
     "echarts": "^5.3.2",
     "echarts-gl": "^2.0.9",
-    "echarts-stat": "^1.2.0"
+    "echarts-stat": "^1.2.0",
+    "ws": "^8.6.0"
   }
 }
